Added -geturi command

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ out/artifacts/.DS_Store
 out/artifacts/momobot_main_jar/.DS_Store
 out/artifacts/momobot_main_jar/config.properties
 out/run/
+src/main/META-INF/
+src/main/META-INF/*
