--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,10 @@ plugins {
 
 repositories {
   mavenCentral()
+  maven {
+    name 'm2-dv8tion'
+    url 'https://m2.dv8tion.net/releases'
+  }
   jcenter()
   mavenLocal()
 }
@@ -20,7 +24,7 @@ dependencies {
   implementation 'com.sedmelluq:lavaplayer:1.3.61'
 
   compile 'com.sedmelluq:jda-nas:1.1.0'
-  compile 'net.dv8tion:JDA:4.2.0_222'
+  compile 'net.dv8tion:JDA:4.3.0_348'
   runtime 'ch.qos.logback:logback-classic:1.1.8'
 
   // https://mvnrepository.com/artifact/org.jdom/jdom2
