--- a/build.gradle
+++ b/build.gradle
@@ -21,11 +21,14 @@ targetCompatibility = 1.8
 
 dependencies {
 
-  implementation 'com.sedmelluq:lavaplayer:1.3.61'
+  implementation 'com.sedmelluq:lavaplayer:1.3.77'
 
   compile 'com.sedmelluq:jda-nas:1.1.0'
   compile 'net.dv8tion:JDA:4.3.0_348'
   runtime 'ch.qos.logback:logback-classic:1.1.8'
+
+  // https://mvnrepository.com/artifact/net.iharder/base64
+  implementation group: 'net.iharder', name: 'base64', version: '2.3.9'
 
   // https://mvnrepository.com/artifact/org.jdom/jdom2
   compile group: 'org.jdom', name: 'jdom2', version: '2.0.5'
