--- a/build.gradle
+++ b/build.gradle
@@ -24,23 +24,23 @@ dependencies {
   implementation 'com.sedmelluq:lavaplayer:1.3.77'
 
   compile 'com.sedmelluq:jda-nas:1.1.0'
-  compile 'net.dv8tion:JDA:4.3.0_348'
-  runtime 'ch.qos.logback:logback-classic:1.1.8'
+  compile 'net.dv8tion:JDA:5.0.0-alpha.2'
+  runtime 'ch.qos.logback:logback-classic:1.2.8'
 
   // https://mvnrepository.com/artifact/net.iharder/base64
   implementation group: 'net.iharder', name: 'base64', version: '2.3.9'
 
   // https://mvnrepository.com/artifact/org.jdom/jdom2
-  compile group: 'org.jdom', name: 'jdom2', version: '2.0.5'
+  compile group: 'org.jdom', name: 'jdom2', version: '2.0.6.1'
 
   // https://mvnrepository.com/artifact/com.cedarsoftware/json-io
-  compile group: 'com.cedarsoftware', name: 'json-io', version: '4.12.0'
+  compile group: 'com.cedarsoftware', name: 'json-io', version: '4.13.0'
 
   // https://mvnrepository.com/artifact/commons-io/commons-io
-  compile group: 'commons-io', name: 'commons-io', version: '2.6'
+  compile group: 'commons-io', name: 'commons-io', version: '2.11.0'
 
   // https://mvnrepository.com/artifact/org.json/json
-  compile group: 'org.json', name: 'json', version: '20190722'
+  compile group: 'org.json', name: 'json', version: '20211205'
 
 
 
