--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ dependencies {
   implementation 'com.sedmelluq:lavaplayer:1.3.77'
 
   compile 'com.sedmelluq:jda-nas:1.1.0'
-  compile 'net.dv8tion:JDA:5.0.0-alpha.2'
+  compile 'net.dv8tion:JDA:5.0.0-beta.2'
   runtime 'ch.qos.logback:logback-classic:1.2.8'
 
   // https://mvnrepository.com/artifact/net.iharder/base64
